--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,16 @@
     font-family: Arial, sans-serif;
     border: 1px solid black;
 }
-.header img{
+
+.header img {
     width: 1366px;
     height: 578px;
-    align-items: center;
-    display: flex;
+    display: block;
+    margin: 0 auto;
     padding-bottom: 30px;
+    padding-top: 30px;
 }
+
 
 .headquarter{
     font-family: Arial, sans-serif;
@@ -104,12 +107,12 @@
 
 .message-content {
     display: flex;
-    flex-direction: row; /* Align message-form and message-info-box horizontally */
+    flex-direction: row;
 }
 
 .message-form {
-    flex: 1; /* Allow message-form to grow and take up remaining space */
-    margin-right: 20px; /* Add spacing between message-form and message-info-box */
+    flex: 1;
+    margin-right: 20px;
 }
 
 .message-info-box {
